deleted Lazy project

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,6 @@ image: Visual Studio 2017
 environment:
     matrix:
     - solution_name: MyThreadPool/MyThreadPool.sln
-    - solution_name: Lazy/Lazy.sln
     
 build_script:
-    - msbuild MyThreadPool.sln
+    - msbuild MyThreadPool/MyThreadPool.sln
