added mytask and mythreadpool classes

--- a/MyThreadPool/MyThreadPool/MyThreadPool.csproj
+++ b/MyThreadPool/MyThreadPool/MyThreadPool.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMyTask.cs" />
+    <Compile Include="MyTask.cs" />
+    <Compile Include="MyThreadPool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
