--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ image: Visual Studio 2017
 environment:
     matrix:
     - solution_name: MyThreadPool/MyThreadPool.sln
+
+before_build:
+  - cmd: nuget restore MyThreadPool/MyThreadPool.sln
     
 build_script:
     - msbuild MyThreadPool/MyThreadPool.sln
