--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,12 @@ image: Visual Studio 2017
 environment:
   matrix:
     - solution_name: Lazy/Lazy.sln
+    - solution_name: MyThreadPool/MyThreadPool.sln
 
 before_build:
   - cmd: nuget restore Lazy/Lazy.sln
+  - cmd: nuget restore MyThreadPool/MythreadPool.sln
 
 build_script:
   - msbuild Lazy/Lazy.sln
+  - msbuild MyThreadPool/MyThreadPool.sln
