--- a/MyThreadPool/MyThreadPool/MyThreadPool.csproj
+++ b/MyThreadPool/MyThreadPool/MyThreadPool.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MyThreadPool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeQueue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
