--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,35 +2,38 @@ version: 1.0.{build}
 
 image: Visual Studio 2017
 
-branches:
+for:
+-
+  branches:
     only:
       - master
       
-environment:
-  matrix:
-    - solution_name: Lazy/Lazy.sln
-    - solution_name: MyThreadPool/MyThreadPool.sln
-    - solution_name: Control1/Control1.sln
+  environment:
+    matrix:
+      - solution_name: Lazy/Lazy.sln
+      - solution_name: MyThreadPool/MyThreadPool.sln
+      - solution_name: Control1/Control1.sln
 
-before_build:
-  - cmd: nuget restore Lazy/Lazy.sln
-  - cmd: nuget restore MyThreadPool/MythreadPool.sln
-  - cmd: nuget restore Control1/Control1.sln
+  before_build:
+    - cmd: nuget restore Lazy/Lazy.sln
+    - cmd: nuget restore MyThreadPool/MythreadPool.sln
+    - cmd: nuget restore Control1/Control1.sln
 
-build_script:
-  - msbuild Lazy/Lazy.sln
-  - msbuild MyThreadPool/MyThreadPool.sln
-  - msbuild Control1/Control1.sln
-  
-branches:
+  build_script:
+    - msbuild Lazy/Lazy.sln
+    - msbuild MyThreadPool/MyThreadPool.sln
+    - msbuild Control1/Control1.sln
+
+-
+  branches:
     only:
       - control1
 
-environment:
-  - solution_name: Control1/Control1.sln
+  environment:
+    - solution_name: Control1/Control1.sln
   
-before_build:
-  - cmd: nuget restore Control1/Control1.sln
+  before_build:
+    - cmd: nuget restore Control1/Control1.sln
   
-build_script:
-  - msbuild Control1/Control1.sln
+  build_script:
+    - msbuild Control1/Control1.sln
