consoleinfo was added

--- a/MyNUnit/TestClasses/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
+++ b/MyNUnit/TestClasses/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7678B529-5669-4CA4-A789-B038456E811F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>MyNUnit</RootNamespace>
-    <AssemblyName>MyNUnit</AssemblyName>
+    <ProjectGuid>{F691F040-613E-4297-AA8B-38E3B468C810}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ClassLibrary1</RootNamespace>
+    <AssemblyName>ClassLibrary1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,10 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MyNUnit">
+      <HintPath>..\..\..\MyNUnit\bin\Debug\MyNUnit.exe</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,21 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\AfterAttribute.cs" />
-    <Compile Include="Attributes\AfterClassAttribute.cs" />
-    <Compile Include="Attributes\BeforeAttribute.cs" />
-    <Compile Include="Attributes\BeforeClassAttribute.cs" />
-    <Compile Include="Attributes\TestAttribute.cs" />
-    <Compile Include="Handlers\MethodTestHandler.cs" />
-    <Compile Include="TestInfo.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestConsoleInfo.cs" />
-    <Compile Include="TestLauncher.cs" />
-    <Compile Include="Handlers\TypeTestHandler.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
