--- a/MyNUnit/TestClasses/ClassLibrary1/ClassLibrary1.csproj
+++ b/MyNUnit/TestClasses/ClassLibrary1/ClassLibrary1.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F691F040-613E-4297-AA8B-38E3B468C810}</ProjectGuid>
+    <ProjectGuid>{4BF8FFAC-A10B-407C-8FF9-592CDBA56731}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClassLibrary1</RootNamespace>
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MyNUnit">
-      <HintPath>..\..\..\MyNUnit\bin\Debug\MyNUnit.exe</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +43,12 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MyNUnit\MyNUnit.csproj">
+      <Project>{7678b529-5669-4ca4-a789-b038456e811f}</Project>
+      <Name>MyNUnit</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
