--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,8 @@
-version: 1.0.{build}
-
-image: Visual Studio 2017
-      
-  - solution_name: MyNUnit/MyNUnit.sln    
-    
-  before_build:
-    - cmd: MyNUnit/MyNUnit.sln    
-
-  build_script:
-    - msbuild MyNUnit/MyNUnit.sln
+image: Visual Studio 2017 
+branches: 
+  only:
+    - mynunit
+before_build:
+  - nuget restore MyNUnit/MyNUnit.sln
+build:
+  project: MyNUnit/MyNUnit.sln
