--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,14 @@ for:
     - msbuild MyThreadPool/MyThreadPool.sln
     - msbuild Control1/Control1.sln
 
+branches: 
+  only:
+    - mythreadpool
+before_build:
+  - nuget restore MyThreadPool/MythreadPool.sln
+build:
+  project: MyThreadPool/MyThreadPool.sln
+
 -
   branches:
     only:
@@ -55,6 +63,13 @@ for:
     - cmd: SimpleFTPClient/SimpleFTPClient.sln
   
   build_script:
-    - msbuild Control1/Control1.sln
     - msbuild SimpleFTPServer/SimpleFTPServer.sln    
     - msbuild SimpleFTPClient/SimpleFTPClient.sln
+
+branches: 
+  only:
+    - mynunit
+before_build:
+  - nuget restore MyNUnit/MyNUnit.sln
+build:
+  project: MyNUnit/MyNUnit.sln
