--- a/GUIForFTP/GUIForFTP/GUIForFTP.csproj
+++ b/GUIForFTP/GUIForFTP/GUIForFTP.csproj
@@ -63,6 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Client.cs" />
+    <Compile Include="ClientViewModel.cs" />
+    <Compile Include="FileInfo.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
