--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,12 +2,63 @@ version: 1.0.{build}
 
 image: Visual Studio 2017
       
-branches:
-  only:
-    - simpleftp
-
-before_build:
-  - nuget restore SimpleFTP/SimpleFTP.sln 
+for:
+-
+  branches:
+    only:
+      - master
+      
   
+  environment:
+      matrix:
+        - solution_name: Lazy/Lazy.sln
+        - solution_name: MyThreadPool/MyThreadPool.sln
+        - solution_name: Control1/Control1.sln
+
+  before_build:
+    - cmd: nuget restore Lazy/Lazy.sln
+    - cmd: nuget restore MyThreadPool/MythreadPool.sln
+    - cmd: nuget restore Control1/Control1.sln
+
+  build_script:
+    - msbuild Lazy/Lazy.sln
+    - msbuild MyThreadPool/MyThreadPool.sln
+    - msbuild Control1/Control1.sln
+
+-
+  branches:
+    only:
+      - control1
+      
+  environment:
+    matrix:
+     - solution_name: Control1/Control1.sln    
+      
+  before_build:
+    - cmd: nuget restore Control1/Control1.sln
+  
+  build_script:
+    - msbuild Control1/Control1.sln
+
+-
+  branches:
+    only:
+      - simpleftp
+
+  environment:
+    matrix:
+     - solution_name: SimpleFTP/SimpleFTP.sln    
+      
+  before_build:
+    - cmd: SimpleFTP/SimpleFTP.sln    
+  
+  build_script:
+    - msbuild SimpleFTP/SimpleFTP.sln    
+
+branches: 
+  only:
+    - mynunit
+before_build:
+  - nuget restore MyNUnit/MyNUnit.sln
 build:
-  project: SimpleFTP/SimpleFTP.sln
+  project: MyNUnit/MyNUnit.sln
