--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,7 +50,7 @@ for:
      - solution_name: SimpleFTP/SimpleFTP.sln    
       
   before_build:
-    - cmd: nuget SimpleFTP/SimpleFTP.sln    
+    - cmd: nuget restore SimpleFTP/SimpleFTP.sln    
   
   build_script:
     - msbuild SimpleFTP/SimpleFTP.sln    
