--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,6 +58,7 @@ for:
     - msbuild SimpleFTPServer/SimpleFTPServer.sln    
     - msbuild SimpleFTPClient/SimpleFTPClient.sln
 
+-
 branches: 
   only:
     - mynunit
@@ -65,3 +66,12 @@ before_build:
   - nuget restore MyNUnit/MyNUnit.sln
 build:
   project: MyNUnit/MyNUnit.sln
+
+-
+branches: 
+  only:
+    - guiftp
+before_build:
+  - nuget restore GUIForFTP/GUIForFTP.sln
+build:
+  project: GUIForFTP/GUIForFTP.sln
