Решена задача на отображение списка. Добавлены комментарии к предыдущим задачам

--- a/sem 4/Exercise 1/Exercise 1/Exercise 1.fsproj
+++ b/sem 4/Exercise 1/Exercise 1/Exercise 1.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="reverse.fsx" />
+    <None Include="fibonacci.fsx" />
     <None Include="fact.fsx" />
   </ItemGroup>
 
