--- a/sem 4/Exercise2/Exercise2/Exercise2.fsproj
+++ b/sem 4/Exercise2/Exercise2/Exercise2.fsproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Palindrome.fs" />
-    <Compile Include="FirstPosition.fs" />
+    <Compile Include="main.fs" />
   </ItemGroup>
 
 </Project>
