--- a/sem 4/Exercise2/Exercise2.Test/Exercise2.Test.fsproj
+++ b/sem 4/Exercise2/Exercise2.Test/Exercise2.Test.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="MergeSort.fs" />
     <Compile Include="Palindrome.fs" />
     <Compile Include="FirstPosition.fs" />
   </ItemGroup>
