--- a/sem 4/Exercise 3/Exercise 3.Test/Exercise 3.Test.fsproj
+++ b/sem 4/Exercise 3/Exercise 3.Test/Exercise 3.Test.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="BinTreeMapTest.fs" />
     <Compile Include="EvenNumbersTest.fs" />
   </ItemGroup>
 
