--- a/sem 4/Exercise 3/Exercise 3/Exercise 3.fsproj
+++ b/sem 4/Exercise 3/Exercise 3/Exercise 3.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SequenceOfPrimeNumbers.fs" />
     <Compile Include="BinTree.fs" />
     <Compile Include="EvenNumbers.fs" />
   </ItemGroup>
