Реализовал обход двоичного дерева, поиск по имени.

--- a/sem 4/Exercise 5/Exercise 5.Test/Exercise 5.Test.fsproj
+++ b/sem 4/Exercise 5/Exercise 5.Test/Exercise 5.Test.fsproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="PhoneBookTest.fs" />
     <Compile Include="PointFreeTest.fs" />
     <Compile Include="BracketsTest.fs" />
   </ItemGroup>
