--- a/sem 4/Exercise 5/Exercise 5/Exercise 5.fsproj
+++ b/sem 4/Exercise 5/Exercise 5/Exercise 5.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="PhoneBook.fs" />
     <Compile Include="PointFree.fs" />
     <Compile Include="Brackets.fs" />
   </ItemGroup>
