Добавил точку входа, изменил выгрузку из файла.

--- a/sem 4/Exercise 5/Exercise 5/Exercise 5.fsproj
+++ b/sem 4/Exercise 5/Exercise 5/Exercise 5.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="PhoneBook.fs" />
     <Compile Include="PointFree.fs" />
     <Compile Include="Brackets.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
 </Project>
