Добавил лямбда интерпретатор к appveyor.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,13 +21,13 @@ for:
       - sem4_ex4
       
   before_build:
-    - nuget restore "sem 4/Exercise 4/Lambda Interpreter.sln"
+    - nuget restore "sem 4/Exercise 4/Lambda Interpreter/Lambda Interpreter.sln"
     
   build:
-    project: "sem 4/Exercise 4/Lambda Interpreter.sln"
+    project: "sem 4/Exercise 4/Lambda Interpreter/Lambda Interpreter.sln"
     
   test_script:
-    - dotnet test "sem 4/Exercise 5/Lambda Interpreter.sln"
+    - dotnet test "sem 4/Exercise 4/Lambda Interpreter/Lambda Interpreter.sln"
 - 
   branches:
     only:
