--- a/sem 4/Control2/Control2.Test/Control2.Test.fsproj
+++ b/sem 4/Control2/Control2.Test/Control2.Test.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="QueueTest.fs" />
     <Compile Include="SequencesTest.fs" />
   </ItemGroup>
 
