--- a/sem 4/Control2/Control2/Control2.fsproj
+++ b/sem 4/Control2/Control2/Control2.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="PriorQueue.fs" />
     <Compile Include="Sequences.fs" />
   </ItemGroup>
 
