Написал вторую задачку, добавил к ней тесты.

--- a/sem 4/Exercise 7/Exercise 7.Test/Exercise 7.Test.fsproj
+++ b/sem 4/Exercise 7/Exercise 7.Test/Exercise 7.Test.fsproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="RoundingTest.fs" />
+    <Compile Include="StringNumberWorkflowTest.fs" />
+    <Compile Include="RoundingWorkflowTest.fs" />
   </ItemGroup>
 
   <ItemGroup>
