--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,3 +33,17 @@ for:
 
   test_script:
     - dotnet test "sem 4/Exercise 5/Exercise 5.sln"
+    
+- 
+  branches:
+    only:
+      - sem4_ex6
+
+  before_build:
+    - nuget restore "sem 4/Exercise 6/Exercise 6.sln"
+
+  build:
+    project: "sem 4/Exercise 6/Exercise 6.sln"
+
+  test_script:
+    - dotnet test "sem 6/Exercise 6/Exercise 6.sln"
