--- a/sem 4/Exercise 6/Exercise 6.Test/Exercise 6.Test.fsproj
+++ b/sem 4/Exercise 6/Exercise 6.Test/Exercise 6.Test.fsproj
@@ -7,14 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nunit" Version="3.10.1" />
+    <PackageReference Include="FsUnit" Version="3.4.0" />
+    <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs"/>
-    <Compile Include="Program.fs"/>
+    <Compile Include="UnitTest1.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
 </Project>
