--- a/sem 4/Exercise 6/Exercise 6/Exercise 6.fsproj
+++ b/sem 4/Exercise 6/Exercise 6/Exercise 6.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="OperatingSystemInterface.fs" />
   </ItemGroup>
 
 </Project>
