Написал тесты для задачи

--- a/sem 4/Exercise 6/Exercise 6.Test/Exercise 6.Test.fsproj
+++ b/sem 4/Exercise 6/Exercise 6.Test/Exercise 6.Test.fsproj
@@ -14,8 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="NetworkTest.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Exercise 6\Exercise 6.fsproj" />
   </ItemGroup>
 
 </Project>
