--- a/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
+++ b/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="SitesSize.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FsUnit" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
