Исправил SingleThreadLazy, дописал LazyFactory, написал тесты к SingleThreadLazy.

--- a/sem 4/Exercise 8/Exercise 8.Test/Exercise 8.Test.fsproj
+++ b/sem 4/Exercise 8/Exercise 8.Test/Exercise 8.Test.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="LazyTest.fs" />
     <Compile Include="SitesSizeTest.fs" />
   </ItemGroup>
 
