--- a/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
+++ b/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Lazy\ILazy.fs" />
+    <Compile Include="Lazy\SingleThreadLazy.fs" />
+    <Compile Include="Lazy\LazyFactory.fs" />
     <Compile Include="SitesSize.fs" />
   </ItemGroup>
 
