--- a/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
+++ b/sem 4/Exercise 8/Exercise 8/Exercise 8.fsproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Compile Include="Lazy\ILazy.fs" />
+    <Compile Include="Lazy\LockFreeMultipleThreadLazy.fs" />
+    <Compile Include="Lazy\SafeMultipleThreadLazy.fs" />
     <Compile Include="Lazy\SingleThreadLazy.fs" />
     <Compile Include="Lazy\LazyFactory.fs" />
     <Compile Include="SitesSize.fs" />
